# deskhpsdr

./: .gitignore  CMakeLists.txt  COMPILE.windows  Makefile  TODO-WINDOWS.md  WINDOWS-PACKAGING.md  claude.md  package-windows.sh  windows_compat.h
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  install-mingw-openssl.sh
HL2-Tools/: hl2_eeprom_discovery.c  hl2_ip_tool.c
Windows/: CHANGES_SUMMARY.md  PACKAGING-NOTES.md  PORTING_NOTES.md  auto_compat.h  endian.h  fcntl.h  ifaddrs.h  install.sh  make.config.pihpsdr.example  mingw-toolchain.cmake  netdb.h  package.sh  poll.h  pthread.h  pwd.h  semaphore.h  termios.h  unistd.h  wdsp_wrapper.h  windows_compat.c  windows_compat.h  windows_midi.c  windows_midi.h  windows_stubs.c
Windows/arpa/: inet.h
Windows/net/: if.h  if_arp.h
Windows/netinet/: in.h  ip.h  tcp.h
Windows/sys/: ioctl.h  mman.h  resource.h  select.h  socket.h  utsname.h
libsolar/: CMakeLists.txt
libtelnet/: CMakeLists.txt
src/: about_menu.c  action_dialog.c  actions.c  actions.h  bootldrsim.c  bootloader.c  client_server.c  client_server.h  configure.c  discovered.h  discovery.c  dxcluster.c  exit_menu.c  gpio.c  gpio_stubs.c  hpsdrsim.c  i2c.c  iambic.c  main.c  main.h  meter.c  meter_menu.c  midi2.c  midi_menu.c  new_discovery.c  new_menu.c  new_menu.h  new_protocol.c  newhpsdrsim.c  old_discovery.c  old_protocol.c  ozyio.c  portaudio.c  protocols.c  radio.c  radio.h  receiver.c  rigctl.c  rigctl_menu.c  rx_panadapter.c  (+19 more)
wdsp-1.28/: CMakeLists.txt  analyzer.h  comm.h  make_interface.c  wdsp.h
